tests/negative/test_lit_invalid_cast.orb
fnc main () () {
    100:(i32 *);
};